# ca-dollar-trace

./: .gitignore  README.md
pipeline/: pyproject.toml
pipeline/scripts/: fetch_990_xml.py
pipeline/sources/: bhcip_awards.yaml  cdtfa_insurance.yaml  cdtfa_sales.yaml  city_checkbooks.yaml  city_finances.yaml  compensation.yaml  county_finances.yaml  district_finances.yaml  ebudget_detail.yaml  ebudget_enacted.yaml  entities.yaml  fac_sefa.yaml  federal_subawards.yaml  fiscal_vendor.yaml  ftb_corp.yaml  ftb_pit.yaml  grants_awards.yaml  grants_portal.yaml  hospital_finances.yaml  irs_soi.yaml  k12_apportionment.yaml  medical_plans.yaml  nonprofit_officers.yaml  nonprofits.yaml  pension_positions.yaml  sacs_k12.yaml  search_index.yaml  sec_state_tax.yaml  sources_catalog.yaml  usaspending_ca.yaml
pipeline/sources/captured/990/: 010852709_202543289349301304_public.xml  134341279_202501959349300605_public.xml  204535835_202521299349303837_public.xml  210634479_202542279349302009_public.xml  231716750_202502769349301565_public.xml  237088205_202501349349300000_public.xml  237089977_202502389349300300_public.xml  (+156 more)
pipeline/sources/curated/: bhcip_awardees_snapshot.csv  downstream_visibility.yaml  origin_visibility.yaml
pipeline/src/cadollar/: __init__.py  cli.py  config.py  engine.py  sources.py  storage.py
pipeline/tests/: test_cdtfa_insurance.py  test_cdtfa_sales.py  test_connectors.py  test_ebudget_waterfall.py  test_ftb_corp.py  test_ftb_pit.py  test_grants_pipeline.py  test_irs_soi.py  test_public_sector_regex.py  test_published_contracts.py
site/: package.json  (+4 more)
(+175 files in other folders)
