[project]
name = "cadollar"
version = "0.1.0"
description = "Batch pipeline for the California tax-dollar transparency platform: pulls public spending sources, writes parquet layers to R2, publishes static JSON."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "stamina>=24.3",
    "pyrate-limiter>=3.7",
    "glom>=23.5",
    "duckdb>=1.1",
    "pyarrow>=17.0",
    "boto3>=1.35",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
]

[project.scripts]
cadollar = "cadollar.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cadollar"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
